--- a/server/config/.env
+++ b/server/config/.env
@@ -3,7 +3,7 @@ CLOUDINARY_API_KEY =
 CLOUDINARY_API_SECRET = 
 PORT = 5200
 DB_URL = mongodb://127.0.0.1:27017/project_management
-APP_URL = http://localhost:3000
+APP_URL = https://pms-aron.vercel.app
 SMPT_HOST = smtp.gmail.com
 SMPT_SERVICE = gmail
 SMPT_PORT = 465
