--- a/server/config/.env
+++ b/server/config/.env
@@ -2,7 +2,7 @@ CLOUDINARY_NAME =
 CLOUDINARY_API_KEY = 
 CLOUDINARY_API_SECRET = 
 PORT = 5200
-DB_URL = mongodb://127.0.0.1:27017/project_management
+DB_URL = mongodb+srv://nakitaaronwebsolutions:7DTre7fOMZuOXire@cluster0.33oc3l3.mongodb.net/project_management
 APP_URL = https://pms-aron.vercel.app
 SMPT_HOST = smtp.gmail.com
 SMPT_SERVICE = gmail
