--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.9.0",
     "redux-thunk": "^2.4.2",
     "use-force-update": "^1.0.11",
     "web-vitals": "^2.1.4"
